Updates java.md
Auto commit by GitBook Editor